--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body class="home">
-    <header class="mb-4 fixed-top">
+    <header class="mb-4">
         <nav class="container-fluid navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Energy Meter</a>
         </nav>
