--- a/chart.html
+++ b/chart.html
@@ -22,7 +22,7 @@
 <body>
     <header class="fixed-top">
         <nav class="container-fluid navbar d-flex justify-content-between navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Energy Meter</a>
+            <a class="navbar-brand" href="#"><h2>Energy Meter Dashboard</h2></a>
             <a class="navbar-brand" href="./index.html">Sign Out</a>
         </nav>
     </header>
