--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="home">
     <header class="mb-4">
         <nav class="container-fluid navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Energy Meter</a>
+            <a class="navbar-brand" href="#"><h2>Energy Meter Dashboard</h2></a>
         </nav>
     </header>
     
