--- a/chart.html
+++ b/chart.html
@@ -18,6 +18,7 @@
     <!-- Charts cdn  -->
     <script src='https://cdn.plot.ly/plotly-2.12.1.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0/dist/chartjs-plugin-datalabels.min.js"></script>
 </head>
 <body>
     <header class="fixed-top">
