changed units in gauge

--- a/chart.html
+++ b/chart.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <div class="row d-flex gap-2 container-fluid mt-5">
+        <div class="row d-flex gap-2 container-fluid mt-5 pt-sm-4">
             <section class="col-md-4 col-sm-6 m-auto">
                 <div id="current-gauge" class="my-5"></div>
             </section>
